2000-08-28  Jeff Freedman  <jeff@amy.nerble.net>

	* Fixed 'cube' puzzle, by adding 'framenum' parm. to find_nearby().

2000-08-27  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode.cc: Mark/recall spells supported.

2000-08-27  Willem Jan Palenstijn <palenstijn@wanadoo.nl>

	* exult.cc/usecode.cc: mark location on map (also on teleport map)
	* spells.cc: now need level x for casting x-th circle spells

2000-08-26  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode.cc: Support crystal-ball.
	* gametxt.cc: Fixed bee combat mode, also smokebombs.

2000-08-25  Willem Jan Palenstijn <palenstijn@wanadoo.nl>

	* exult.cc/spells.cc: implemented archwizard mode cheat

2000-08-25  Jeff Freedman  <jeff@amy.nerble.net>

	* spells.cc: Fixed double-click bug.  Also, check and decrement mana.

2000-08-23  Tristan Tarrant  <nadir@users.sourceforge.net>

	* tools/u7shpload.c: Can now save shapes

2000-08-22  Tristan Tarrant  <nadir@users.sourceforge.net>

	* configure.in: Look for gimptool
	* tools/u7shpload.c: GIMP plugin for loading U7 shapes

2000-08-22  Willem Jan Palenstijn <palenstijn@wanadoo.nl>

	* exult.cc: ctrl+alt+t now brings up a map for teleporting

2000-08-21  Tristan Tarrant  <nadir@users.sourceforge.net>

	* objs.h: Fixed small leak in ~Frames_sequence()
	* gamewin.cc: Fixed small leak in ~Game_window()

2000-08-21  Jeff Freedman  <jeff@amy.nerble.net>

	* Actors teleport to chairs if blocked.
	* Shortcuts:  f=feed, m=show map, b=open spellbook, w=use watch.

2000-08-21  Willem Jan Palenstijn  <palenstijn@wanadoo.nl>

	* exult.cc, actors.cc: alt-G toggles God Mode, making your party
	invulnerable, and every strike lethal.

2000-08-21  Tristan Tarrant  <nadir@users.sourceforge.net>

	game.cc: Alt-X now quits the menu (same as the original), although a
	confirmation box is missing.

2000-08-21  Tristan Tarrant  <nadir@users.sourceforge.net>

	* game.cc: wait_delay() now checks for events during delay, so that